Subindo versão final para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
+                 <button class="button-reset" onclick="resetarJogo()" aria-label="Reiniciar jogo"> jogar novamente</button>
+</div>
+
             </div>
         </section>
     </main>
